--- a/index.html
+++ b/index.html
@@ -650,6 +650,9 @@
                     </div>
                     <div class="app-label">System Stability Settlement</div>
                 </a>
+                    <a href="marketwatch.html" class="app-card cat-doc">
+                    <div class="app-icon">⚖️</div><div class="app-label">New Gold Standard (Market Watch)</div>
+                </a>
                 
             </div>
 
@@ -1032,4 +1035,5 @@
     </script>
 </body>
 </html>
+
 
