--- a/Systemstabillitysettlement.html
+++ b/Systemstabillitysettlement.html
@@ -88,6 +88,12 @@
             <div class="file-tag">File: autoconverter.html</div>
         </a>
 
+        <a href="rasioutangusd.html" class="menu-item">
+            <div class="menu-title">10. Audit Kebangkrutan Bandar US/FED (Debt Counter-Strike)</div>
+            <div class="menu-desc">Senjata diplomatik pamungkas. Membuktikan secara matematis bahwa penagih utang global (FED/AS) sebenarnya sudah bangkrut. Membalikkan posisi tawar: yang ditagih jauh lebih kuat karena memegang timbangan riil, sementara yang nagih hanya memegang kertas tanpa jaminan.</div>
+            <div class="file-tag">rasioutangusd.html</div>
+        </a>
+
     </div>
 
     <div class="footer">
@@ -98,5 +104,6 @@
 </body>
 
 </html>
+
 
 
