--- a/marketwatch.html
+++ b/marketwatch.html
@@ -77,8 +77,8 @@
             </div>
         </div>
         <div class="input-group" style="display: flex; flex-direction: column; justify-content: flex-end; color: var(--silver); font-size: 0.8em;">
-            <span>JANGKAR: PURE GOLD REJECTION [cite: 2026-01-21]</span>
-            <span>STATUS: EQUAL SIZE DECIMAL VISUAL ACTIVE</span>
+            <span>NILAI TUKAR MATA UANG BERLAKU BILA ITU DI JAMINKAN EMAS/PERAK</span>
+            <span>TANPA JAMINAN, GUNAKAN STANDAR EMAS/PERAK SESUAI BERAT GRAM</span>
         </div>
     </div>
 
@@ -166,4 +166,5 @@
     runTerminal();
 </script>
 </body>
+
 </html>
