--- a/index.html
+++ b/index.html
@@ -653,6 +653,9 @@
                     <a href="marketwatch.html" class="app-card cat-doc">
                     <div class="app-icon">⚖️</div><div class="app-label">New Gold Standard (Market Watch)</div>
                 </a>
+                    <a href="#" onclick="launchApp('Multi Tools.html', 'Multi Tools', '🕐')" class="app-card cat-sys">
+                    <div class="app-icon">🕐</div><div class="app-label">Perlengkapan Taktis</div>
+                </a>
                 
             </div>
 
@@ -1035,5 +1038,6 @@
     </script>
 </body>
 </html>
+
 
 
