--- a/nesemu.html
+++ b/nesemu.html
@@ -144,8 +144,8 @@
         <div class="cartridge-slot">
             <h3 style="margin:0 0 10px 0; border-bottom: 1px solid #777;">GAME LIBRARY</h3>
             
-            <button class="game-btn" onclick="tryLoad('Chip n Dale Rescue Rangers 2 (U) [!].nes')">Chip 'n Dale 2</button>
-            <button class="game-btn" onclick="tryLoad('RoboCop 3 (U) [!p].nes')">RoboCop 3</button>
+            <button class="game-btn" onclick="tryLoad('CHIPDALE.NES')">Chip 'n Dale 2</button>
+            <button class="game-btn" onclick="tryLoad('ROBOCOP3.NES')">RoboCop 3</button>
             <button class="game-btn" onclick="tryLoad('TMNT.NES')">TMNT (Ninja Turtles)</button>
             
             <button class="game-btn" style="background:#444; color:#aaa; margin-top:10px;" onclick="document.getElementById('file-input').click()">📁 BUKA FILE MANUAL...</button>
