--- a/index.html
+++ b/index.html
@@ -656,7 +656,11 @@
                     <a href="#" onclick="launchApp('Multi Tools.html', 'Multi Tools', '🕐')" class="app-card cat-sys">
                     <div class="app-icon">🕐</div><div class="app-label">Perlengkapan Taktis</div>
                 </a>
-                
+                    <a href="#" onclick="launchApp('petaduniabaru.html', 'Peta jalur', '🌍')" class="app-card cat-fin">
+                    <div class="app-icon">🌍</div>
+                    <div class="app-label">Peta Dunia Baru Nuswantara</div>
+                </a>
+                    
             </div>
 
             <div style="text-align:center; padding: 20px; font-size:0.6rem; color:#666;">
@@ -1038,6 +1042,7 @@
     </script>
 </body>
 </html>
+
 
 
 
