--- a/petaduniabaru.html
+++ b/petaduniabaru.html
@@ -115,6 +115,20 @@
             <p><strong>[RECOMMENDED]</strong> Peta Radar interaktif dengan simulasi jalur penerbangan & distorsi jarak real-time.</p>
         </a>
 
+            <a href="newflagzone.html" class="card">
+            <span class="status"></span>
+            <span class="icon">✈</span>
+            <h3>FLIGHT PATH ZONE (v2.0)</h3>
+            <p><strong>[RECOMMENDED]</strong> Peta Radar interaktif dengan simulasi jalur penerbangan & distorsi jarak tempuh.</p>
+        </a>
+
+            <a href="newflagtime.html" class="card">
+            <span class="status"></span>
+            <span class="icon">✈</span>
+            <h3>FLIGHT PATH TIME (v2.0)</h3>
+            <p><strong>[RECOMMENDED]</strong> Peta Radar interaktif dengan simulasi jalur penerbangan & distorsi jarak waktu.</p>
+        </a>
+
         <a href="new geomap.html" class="card">
             <span class="status"></span>
             <span class="icon">◎</span>
