--- a/petaduniabaru.html
+++ b/petaduniabaru.html
@@ -108,6 +108,13 @@
             <p>Peta visual statis dengan pembagian 3 Zona Ring (High Land, Stable Zone, Outer Rim). Mode Zonal Scanning.</p>
         </a>
 
+            <a href="Peta Sunda Nuswantara Baru.html" class="card">
+            <span class="status"></span>
+            <span class="icon">⌖</span>
+            <h3>MASTER INTERFACE</h3>
+            <p>Ukuran Peta Asli, Benua Sunda Nuswantara Baru.</p>
+        </a>
+
         <a href="newflagmapsim.html" class="card">
             <span class="status"></span>
             <span class="icon">✈</span>
