--- a/petaduniabaru.html
+++ b/petaduniabaru.html
@@ -111,7 +111,7 @@
             <a href="Peta Sunda Nuswantara Baru.html" class="card">
             <span class="status"></span>
             <span class="icon">⌖</span>
-            <h3>MASTER INTERFACE</h3>
+            <h3>SUNDALAND MAP</h3>
             <p>Ukuran Peta Asli, Benua Sunda Nuswantara Baru.</p>
         </a>
 
