--- a/petaduniabaru.html
+++ b/petaduniabaru.html
@@ -115,6 +115,13 @@
             <p>Ukuran Peta Asli, Benua Sunda Nuswantara Baru.</p>
         </a>
 
+            <a href="jarak asli vs gambar peta satelit.html" class="card">
+            <span class="status"></span>
+            <span class="icon">⌖</span>
+            <h3>JARAK ASLI DAN FOTO SATELIT</h3>
+            <p>Ukuran Jarak Peta Asli Kuba, Dan Peta Benua Sunda Nuswantara</p>
+        </a>
+
         <a href="newflagmapsim.html" class="card">
             <span class="status"></span>
             <span class="icon">✈</span>
