--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                     <a href="#" onclick="launchApp('Multi Tools.html', 'Multi Tools', '🕐')" class="app-card cat-sys">
                     <div class="app-icon">🕐</div><div class="app-label">Perlengkapan Taktis</div>
                 </a>
-                    <a href="#" onclick="launchApp('petaduniabaru.html', 'Peta jalur', '🌍')" class="app-card cat-fin">
+                    <a href="#" onclick="launchApp('petaduniabaru.html', 'Sunda Nuswantara Map', '🌍')" class="app-card cat-fin">
                     <div class="app-icon">🌍</div>
                     <div class="app-label">Peta Dunia Baru Nuswantara</div>
                 </a>
@@ -1042,6 +1042,7 @@
     </script>
 </body>
 </html>
+
 
 
 
