--- a/explorer.html
+++ b/explorer.html
@@ -258,7 +258,7 @@
     { url: 'Khusus Insan Dewasa Baligh.html', label: 'Dewasa Baligh', icon: '❤️‍🔥', cat: 'cat-human' }
     { url: 'modelmap1.html', label: 'Model Map1', icon: '🌍', cat: 'cat-tools' },
     { url: 'modelmap2.html', label: 'Model Map2', icon: '🌍', cat: 'cat-tools' },
-    { url: 'modelmap3.html', label: 'Model Map3', icon: '🌍', cat: 'cat-tools' },
+    { url: 'modelmap3.html', label: 'Model Map3', icon: '🌍', cat: 'cat-tools' }
       ];
 
         let historyStack = [{target: 'root', cat: 'all'}];
@@ -359,6 +359,7 @@
     </script>
 </body>
 </html>
+
 
 
 
