--- a/explorer.html
+++ b/explorer.html
@@ -255,7 +255,7 @@
     { url: 'SMS.html', label: 'Inbox SMS', icon: '📂', cat: 'cat-tools' },
     { url: '56. Nuswantara Hub.html', label: 'Nuswantara Hub & Tools', icon: '👤', cat: 'cat-tools' },
     { url: 'Bio Medic.html', label: 'Bio Medic Hacking', icon: '💊', cat: 'cat-tech' },
-    { url: 'Khusus Insan Dewasa Baligh.html', label: 'Dewasa Baligh', icon: '❤️‍🔥', cat: 'cat-human' }
+    { url: 'Khusus Insan Dewasa Baligh.html', label: 'Dewasa Baligh', icon: '❤️‍🔥', cat: 'cat-human' },
     { url: 'modelmap1.html', label: 'Model Map1', icon: '🌍', cat: 'cat-tools' },
     { url: 'modelmap2.html', label: 'Model Map2', icon: '🌍', cat: 'cat-tools' },
     { url: 'modelmap3.html', label: 'Model Map3', icon: '🌍', cat: 'cat-tools' }
@@ -359,6 +359,7 @@
     </script>
 </body>
 </html>
+
 
 
 
