--- a/petaduniabaru.html
+++ b/petaduniabaru.html
@@ -107,6 +107,13 @@
             <h3>MASTER INTERFACE</h3>
             <p>Peta visual statis dengan pembagian 3 Zona Ring (High Land, Stable Zone, Outer Rim). Mode Zonal Scanning.</p>
         </a>
+        
+            <a href="ukuran benua riil berdasarkan ukuran kuba.html" class="card">
+            <span class="status"></span>
+            <span class="icon">⌖</span>
+            <h3>Ukuran Semua Benua Dunia</h3>
+            <p>Data statis dengan Perbandingan penghitungan Ukuran Peta Globe dan Ukuran Kuba.</p>
+        </a>
 
             <a href="Peta Sunda Nuswantara Baru.html" class="card">
             <span class="status"></span>
@@ -134,6 +141,13 @@
             <span class="icon">✈</span>
             <h3>FLIGHT PATH ZONE (v2.0)</h3>
             <p><strong>[RECOMMENDED]</strong> Peta Radar interaktif dengan simulasi jalur penerbangan & distorsi jarak tempuh.</p>
+        </a>
+
+            <a href="hellytrap.html" class="card">
+            <span class="status"></span>
+            <span class="icon">✈</span>
+            <h3>FLIGHT Helicopter Rules</h3>
+            <p><strong>[RECOMMENDED]</strong> Memetakan Kenapa Helicopter Terbatas dalam Penerbangan Pribadi.</p>
         </a>
 
             <a href="newflagtime.html" class="card">
