--- a/petaduniabaru.html
+++ b/petaduniabaru.html
@@ -111,7 +111,7 @@
             <a href="ukuran benua riil berdasarkan ukuran kuba.html" class="card">
             <span class="status"></span>
             <span class="icon">⌖</span>
-            <h3>Ukuran Semua Benua Dunia</h3>
+            <h3>Ukuran Semua Benua Dunia dari Prespetif Sentral</h3>
             <p>Data statis dengan Perbandingan penghitungan Ukuran Peta Globe dan Ukuran Kuba.</p>
         </a>
 
@@ -120,6 +120,13 @@
             <span class="icon">⌖</span>
             <h3>SUNDALAND MAP</h3>
             <p>Ukuran Peta Asli, Benua Sunda Nuswantara Baru.</p>
+        </a>
+
+            <a href="database luas kuba tiap negara.html" class="card">
+            <span class="status"></span>
+            <span class="icon">⌖</span>
+            <h3>WORLD MAP UKURAN ASLI KUBA</h3>
+            <p>Ukuran Peta Asli, Semua Negara di masing-masing benua.</p>
         </a>
 
             <a href="jarak asli vs gambar peta satelit.html" class="card">
@@ -209,6 +216,20 @@
             <span class="icon">?</span>
             <h3>THE TRUTH ARCHIVE</h3>
             <p>Dokumentasi teori. Penjelasan "Kamus Kebenaran", logika penerbangan, dan perbandingan sistem ukur.</p>
+        </a>
+
+            <a href="selisih waktu kuba.html" class="card">
+            <span class="status"></span>
+            <span class="icon">?</span>
+            <h3>Zona Waktu Dunia</h3>
+            <p>Menghitung Perbedaan zona Waktu berdasarkan Ukuran Luas Wilayan berdasarkan kuba.</p>
+        </a>
+
+            <a href="zona jam nuswantara.html" class="card">
+            <span class="status"></span>
+            <span class="icon">?</span>
+            <h3>Zona Waktu Sunda Nuswantara</h3>
+            <p>Membandingkan Zona Waktu Antar Wilayah Kuba.</p>
         </a>
 
     </div>
