--- a/explorer.html
+++ b/explorer.html
@@ -260,7 +260,7 @@
     { url: 'modelmap2.html', label: 'Model Map2', icon: '🌍', cat: 'cat-tools' },
     { url: 'modelmap3.html', label: 'Model Map3', icon: '🌍', cat: 'cat-tools' },
     { url: 'jam kerja dan belajar.html', label: 'Sinkronisasi Jam Kerja dan Belajar', icon: '📖', cat: 'cat-culture' },
-    { url: 'jadwal ibadah puasa sunda nuswantara.html', label: 'Sinkronisasi Jam Ibadah Dan Rutin Bulan Puasa', icon: '📖', cat: 'cat-culture' },
+    { url: 'jadwal ibadah puasa sunda nuswantara.html', label: 'Sinkronisasi Jam Ibadah Dan Rutinitas Bulan Puasa', icon: '📖', cat: 'cat-culture' },
     { url: 'manual jam sunda nuswantara.html', label: 'Manual Penggunaan Jam Sunda Nuswantara', icon: '📖', cat: 'cat-culture' },
     { url: 'manual kalender nuswantara.html', label: 'Manual Penggunaan Kalender Sunda Nuswantara', icon: '📖', cat: 'cat-culture' }
       ];
@@ -363,6 +363,7 @@
     </script>
 </body>
 </html>
+
 
 
 
