--- a/petaduniabaru.html
+++ b/petaduniabaru.html
@@ -225,6 +225,13 @@
             <p>Menghitung Perbedaan zona Waktu berdasarkan Ukuran Luas Wilayan berdasarkan kuba.</p>
         </a>
 
+            <a href="NUSWANTARA TIME MASTER SYNC (ANTI JET LAG).html" class="card">
+            <span class="status"></span>
+            <span class="icon">?</span>
+            <h3>Pemahaman Jet Lag dan Sinronisasi Waktu</h3>
+            <p>Menghitung Perbedaan zona Waktu antar wilayah dalam perjalanan jauh, berdasarkan Ukuran Luas Wilayan berdasarkan kuba untuk adaptasi dari Jet Lag.</p>
+        </a>
+
             <a href="zona jam nuswantara.html" class="card">
             <span class="status"></span>
             <span class="icon">?</span>
