--- a/Multi Tools.html
+++ b/Multi Tools.html
@@ -210,7 +210,7 @@
             { url: 'Decalcify Pineal Gland.html', label: 'Pineal Decalc', icon: '🧠', cat: 'cat-bio' },
             { url: 'Cymatic Organ with Live Sound Wave.html', label: 'Cymatic Gen', icon: '🌀', cat: 'cat-bio' },
             { url: 'Cymatic Organ Pineal Activator Edition.html', label: 'Tartarian Cyma', icon: '💠', cat: 'cat-bio' },
-            { url: 'hitung langkah kaki.html', label: 'Bio-Tracker', icon: '👣', cat: 'cat-sensor' },
+            { url: 'hitung langkah kaki.html', label: 'Bio-Tracker', icon: '👣', cat: 'cat-bio' },
             // SURVIVAL MODULE
             { url: 'kalkulator.html', label: 'Scientific Calc', icon: '🧮', cat: 'cat-eng' },
             { url: 'multi converter.html', label: 'Unit Converter', icon: '⚖️', cat: 'cat-eng' },
@@ -222,8 +222,8 @@
             { url: 'soundchat.html', label: 'Sonic Modem', icon: '🔊', cat: 'cat-comms' },
             { url: 'gps location.html', label: 'GPS Radar', icon: '🧭', cat: 'cat-nav' },
             { url: 'rangefinder.html', label: 'Sniper Scope', icon: '🔭', cat: 'cat-nav' },
-            { url: 'scan jarak.html', label: 'Hitung Jarak Antar Lokasi Sebenarnya', icon: '🌍', cat: 'cat-bio' },
-            { url: 'scan map.html', label: 'Cari Peta Kordinat', icon: '🌍', cat: 'cat-bio' }
+            { url: 'scan jarak.html', label: 'Hitung Jarak Antar Lokasi Sebenarnya', icon: '🌍', cat: 'cat-nav' },
+            { url: 'scan map.html', label: 'Cari Peta Kordinat', icon: '🌍', cat: 'cat-nav' }
         ];
 
         // --- 1. LOGIKA JAM (Cakra) ---
@@ -337,4 +337,5 @@
     </script>
 </body>
 </html>
+
 
