--- a/index.html
+++ b/index.html
@@ -660,6 +660,9 @@
                     <div class="app-icon">🌍</div>
                     <div class="app-label">Peta Dunia Baru Nuswantara</div>
                 </a>
+                    <a href="#" onclick="launchApp('edukasi survival dasar.html', 'Edukasi Survival Dasar', '📚')" class="app-card cat-lingo">
+                    <div class="app-icon">📚</div><div class="app-label">Kumpulan Informasi Dasar Survival</div>
+                </a>
                     
             </div>
 
@@ -1042,6 +1045,7 @@
     </script>
 </body>
 </html>
+
 
 
 
