Update edukasi survival dasar.html

--- a/edukasi survival dasar.html
+++ b/edukasi survival dasar.html
@@ -44,6 +44,12 @@
             <div class="desc">Kalibrasi nilai riil (Ayam, Beras, Dirham) untuk barter yang adil.</div>
         </a>
 
+            <a href="aturan ekonomi darurat saat ini tanpa kontrol sentralisasi.html" class="menu-card">
+            <div class="icon">⚖️</div>
+            <div class="label">PROSEDUR EKONOMI TERTUTUP</div>
+            <div class="desc">Pahami bahwa Uang Kertas, Emas dan Perak tidak lebih berharga dari Komunitas yang Hidup.</div>
+        </a>
+
         <a href="struktur sosial darurat.html" class="menu-card">
             <div class="icon">🤝</div>
             <div class="label">SOCIAL FABRIC</div>
@@ -98,4 +104,5 @@
     </footer>
 
 </body>
+
 </html>
