--- a/Multi Tools.html
+++ b/Multi Tools.html
@@ -223,6 +223,7 @@
             { url: 'gps location.html', label: 'GPS Radar', icon: '🧭', cat: 'cat-nav' },
             { url: 'rangefinder.html', label: 'Sniper Scope', icon: '🔭', cat: 'cat-nav' },
             { url: 'scan jarak.html', label: 'Hitung Jarak Antar Lokasi Sebenarnya', icon: '🌍', cat: 'cat-nav' },
+            { url: 'nuswantara area scanner.html', label: 'Hitung Luas Wilayah', icon: '🌍', cat: 'cat-nav' },
             { url: 'scan map.html', label: 'Cari Peta Kordinat', icon: '🌍', cat: 'cat-nav' }
         ];
 
@@ -337,5 +338,6 @@
     </script>
 </body>
 </html>
+
 
 
