--- a/explorer.html
+++ b/explorer.html
@@ -262,7 +262,10 @@
     { url: 'jam kerja dan belajar.html', label: 'Sinkronisasi Jam Kerja dan Belajar', icon: '📖', cat: 'cat-culture' },
     { url: 'jadwal ibadah puasa sunda nuswantara.html', label: 'Sinkronisasi Jam Ibadah Dan Rutinitas Bulan Puasa', icon: '📖', cat: 'cat-culture' },
     { url: 'manual jam sunda nuswantara.html', label: 'Manual Penggunaan Jam Sunda Nuswantara', icon: '📖', cat: 'cat-culture' },
-    { url: 'manual kalender nuswantara.html', label: 'Manual Penggunaan Kalender Sunda Nuswantara', icon: '📖', cat: 'cat-culture' }
+    { url: 'manual kalender nuswantara.html', label: 'Manual Penggunaan Kalender Sunda Nuswantara', icon: '📖', cat: 'cat-culture' },
+    { url: 'kalkulator lahan padi.html', label: 'Kalkulator Kebutuhan Lahan Padi', icon: '🌾', cat: 'cat-edu' },
+    { url: 'kalkulator jumlah ternak.html', label: 'Kalkulator Management Ternak', icon: '🛖', cat: 'cat-edu' },
+    { url: 'kalkulator panen ikan dan sayur.html', label: 'Kalkulator Kebutuhan Protein Ikan dan Sayur', icon: '🍯', cat: 'cat-edu' }
       ];
 
         let historyStack = [{target: 'root', cat: 'all'}];
@@ -363,6 +366,7 @@
     </script>
 </body>
 </html>
+
 
 
 
