--- a/explorer.html
+++ b/explorer.html
@@ -188,6 +188,15 @@
         // Database aplikasi sinkron dengan index.html
       const appDatabase = [
     { url: 'Readme.html', label: 'Tentang', icon: 'ℹ️', cat: 'cat-blue' },
+    { url: 'kesetaraan harga emas perak.html', label: 'Kesetaraan Harga Emas dan Perak', icon: '📝', cat: 'cat-blue' },
+    { url: 'kesetaraan nilai.html', label: 'Kesetaraan Nilai', icon: '📝', cat: 'cat-blue' },
+    { url: 'persamaan nilai komoditas.html', label: 'Persamaan Nilai tanpa Alat Tukar', icon: '📝', cat: 'cat-blue' },
+    { url: 'kesetaraan harga anti deflasi.html', label: 'Kesetaraan Harga Anti Deflasi', icon: '📝', cat: 'cat-blue' },
+    { url: 'protokol uang emas dan perak.html', label: 'Protokol Aturan Uang Emas dan Perak', icon: '📝', cat: 'cat-blue' },
+    { url: 'jebakan standar dollar.html', label: 'Jebakan Standar Dolar', icon: '📝', cat: 'cat-blue' },
+    { url: 'solusi anti ekonomi elit tanpa dolar.html', label: 'Solusi Ekonomi Elit Tanda Dolar/Fiat', icon: '📝', cat: 'cat-blue' },
+    { url: 'jantung ekonomi micro.html', label: 'Jantung Ekonomi Micro', icon: '📝', cat: 'cat-blue' },
+    { url: 'protokol ekonomi micro darurat likuiditas.html', label: 'Protokol Ekonomi Micro Darurat', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -366,6 +375,7 @@
     </script>
 </body>
 </html>
+
 
 
 
