--- a/explorer.html
+++ b/explorer.html
@@ -197,7 +197,7 @@
     { url: 'solusi anti ekonomi elit tanpa dolar.html', label: 'Solusi Ekonomi Elit Tanda Dolar/Fiat', icon: '📝', cat: 'cat-blue' },
     { url: 'jantung ekonomi micro.html', label: 'Jantung Ekonomi Micro', icon: '📝', cat: 'cat-blue' },
     { url: 'protokol ekonomi micro darurat likuiditas.html', label: 'Protokol Ekonomi Micro Darurat', icon: '📝', cat: 'cat-blue' },
-    { url: 'nilai dan jasa yang layak emas.html', label: 'Nilai dan Jasa yang Layak di Bayar Emas/Perak', icon: '📝', cat: 'cat-blue' },
+    { url: 'nilai dan jasa yang layak emas.html', label: 'Nilai dan Jasa yang Layak di Bayar Emas atau Perak', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -376,6 +376,7 @@
     </script>
 </body>
 </html>
+
 
 
 
