--- a/explorer.html
+++ b/explorer.html
@@ -202,6 +202,11 @@
     { url: 'gerakan ekonomi rakyat.html', label: '50 Gerakan Ekonomi Rakyat', icon: '📝', cat: 'cat-blue' },
     { url: 'solusi ekonomi rakyat.html', label: '50 Solusi Ekonomi Rakyat', icon: '📝', cat: 'cat-blue' },
     { url: 'panduan kedaulatan ekonomi mikro dengan uang receh.html', label: '50 Panduan Kedaulatan Ekonomi Mikro dengan uang Receh', icon: '📝', cat: 'cat-blue' },
+    { url: 'panduan bebas finansial real.html', label: '50 Panduan Bebas Finansial Real', icon: '📝', cat: 'cat-blue' },
+    { url: 'protokol audit harga wajar tolak m2.html', label: '50 Protokol Audit Harga Wajar Tolak M2', icon: '📝', cat: 'cat-blue' },
+    { url: 'restorasi mundur ke abad awal milenium.html', label: '50 Restorasi Mundur ke Abad Awal Milenium', icon: '📝', cat: 'cat-blue' },
+    { url: 'kuliner 90an dan rutinitasnya.html', label: '50 Kuliner 90an dan Rutinitasnya.html', icon: '📝', cat: 'cat-blue' },
+    { url: 'survival kit 90s dan sumber ekonomi anak.html', label: '50 Survival kit 90s dan Sumber ekonomi Anak', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -380,6 +385,7 @@
     </script>
 </body>
 </html>
+
 
 
 
