--- a/explorer.html
+++ b/explorer.html
@@ -207,6 +207,13 @@
     { url: 'restorasi mundur ke abad awal milenium.html', label: '50 Restorasi Mundur ke Abad Awal Milenium', icon: '📝', cat: 'cat-blue' },
     { url: 'kuliner 90an dan rutinitasnya.html', label: '50 Kuliner 90an dan Rutinitasnya.html', icon: '📝', cat: 'cat-blue' },
     { url: 'survival kit 90s dan sumber ekonomi anak.html', label: '50 Survival kit 90s dan Sumber ekonomi Anak', icon: '📝', cat: 'cat-blue' },
+    { url: 'restorasi profesi teknologi kuno.html', label: '50 Restorasi Profesi Teknologi Kuno', icon: '📝', cat: 'cat-blue' },
+    { url: 'bursa kerja era sunda nuswantara.html', label: '50 Bursa Kerja Era Sunda Nuswantara', icon: '📝', cat: 'cat-blue' },
+    { url: 'restorasi teknologi sederhana mandiri.html', label: '50 Restorasi Teknologi Sederhana Mandiri', icon: '📝', cat: 'cat-blue' },
+    { url: 'restorasi alat produksi berdaulat rakyat.html', label: '50 Restorasi Alat Produksi Berdaulat Rakyat', icon: '📝', cat: 'cat-blue' },
+    { url: 'bahan alat industri rongsok sederhana.html', label: '50 Bahan Alat Industri Rongsok Sederhana', icon: '📝', cat: 'cat-blue' },
+    { url: 'restorarasi free energy dan kapasitas outputnya.html', label: '50 Restorarasi Free Energy dan Kapasitas Outputnya', icon: '📝', cat: 'cat-blue' },
+    { url: 'restorasi kedaulatan nilai.html', label: '50 Restorasi Kedaulatan Nilai', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -385,6 +392,7 @@
     </script>
 </body>
 </html>
+
 
 
 
