--- a/explorer.html
+++ b/explorer.html
@@ -259,6 +259,8 @@
     { url: '42. Advanced Systems.html', label: 'Advanced Systems', icon: '⚛️', cat: 'cat-tech' },
     { url: '43. Forbidden Tech.html', label: 'Forbidden Tech', icon: '⚛️', cat: 'cat-tech' },
     { url: '44. Gallery.html', label: 'Gallery', icon: '🖼️', cat: 'cat-doc' },
+    { url: 'NS-Pad.html', label: 'Nuswantara Notepad', icon: '📝', cat: 'cat-doc' },
+    { url: 'NS-Paint.html', label: 'Nuswantara Paint', icon: '✒️', cat: 'cat-doc' },
     { url: '45. Media Player.html', label: 'Media Player', icon: '🎵', cat: 'cat-doc' },
     { url: '46. TV Jadul.html', label: 'TV Jadul', icon: '📺', cat: 'cat-doc' },
     { url: '54. Double Anchor System.html', label: 'Double Anchor System', icon: '⚖️', cat: 'cat-fin' },
@@ -392,6 +394,7 @@
     </script>
 </body>
 </html>
+
 
 
 
