--- a/explorer.html
+++ b/explorer.html
@@ -214,6 +214,19 @@
     { url: 'bahan alat industri rongsok sederhana.html', label: '50 Bahan Alat Industri Rongsok Sederhana', icon: '📝', cat: 'cat-blue' },
     { url: 'restorarasi free energy dan kapasitas outputnya.html', label: '50 Restorarasi Free Energy dan Kapasitas Outputnya', icon: '📝', cat: 'cat-blue' },
     { url: 'restorasi kedaulatan nilai.html', label: '50 Restorasi Kedaulatan Nilai', icon: '📝', cat: 'cat-blue' },
+    { url: 'manifestor tata ruang dan alam.html', label: 'Manifestor Tata Ruang dan Alam', icon: '📝', cat: 'cat-blue' },
+    { url: 'sirkulasi element prequesi bumi.html', label: 'Sirkulasi Element Frequesi Bumi', icon: '📝', cat: 'cat-blue' },
+    { url: 'DIY prequensi bumi untuk Kasur Tidur.html', label: 'DIY Frequensi Bumi untuk Kasur Tidur', icon: '📝', cat: 'cat-blue' },
+    { url: 'bio prequensi hening.html', label: 'Bio Frequensi Hening', icon: '📝', cat: 'cat-blue' },
+    { url: 'bahan bangunan alami ramah lingkungan.html', label: 'Bahan Bangunan Alami Ramah Lingkungan', icon: '📝', cat: 'cat-blue' },
+    { url: 'teknologi perekat konstruksi alami.html', label: 'Teknologi Perekat Konstruksi Alami', icon: '📝', cat: 'cat-blue' },
+    { url: 'pengolahan kapur sebagai perekat alami.html', label: 'Pengolahan Kapur Sebagai Perekat Alami', icon: '📝', cat: 'cat-blue' },
+    { url: 'bahan perekat alami tambahan.html', label: 'Bahan Perekat Alami Tambahan', icon: '📝', cat: 'cat-blue' },
+    { url: 'resep pembuatan bata dan genteng majapahit.html', label: 'Resep Pembuatan Bata dan Genteng Majapahit', icon: '📝', cat: 'cat-blue' },
+    { url: 'tehnik paku bumi dan anti tanah bergerak.html', label: 'Tehnik Paku Bumi dan Anti Tanah Bergerak', icon: '📝', cat: 'cat-blue' },
+    { url: 'konsep anti tanah gerak dan longsor.html', label: 'Konsep Anti Tanah Gerak dan Longsor', icon: '📝', cat: 'cat-blue' },
+    { url: 'tata ruag bio mekanik.html', label: 'Tata Ruang Bio Mekanik', icon: '📝', cat: 'cat-blue' },
+    { url: 'konsep tata ruang anti banjir dan logsor.html', label: 'Konsep Tata Ruang Anti Banjir dan Logsor', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -394,6 +407,7 @@
     </script>
 </body>
 </html>
+
 
 
 
