--- a/explorer.html
+++ b/explorer.html
@@ -156,9 +156,9 @@
                         <div class="item-icon">💾</div>
                         <div class="item-label">System (C:)</div>
                     </div>
-                    <div class="item-card" onclick="navigate('apps', 'cat-future', true, null)">
+                    <div class="item-card" onclick="navigate('apps', 'cat-blue', true, null)">
                         <div class="item-icon">💾</div>
-                        <div class="item-label">Arsip Data (E:)</div>
+                        <div class="item-label">Data Dokument (E:)</div>
                     </div>
                 </div>
             </div>
@@ -407,6 +407,7 @@
     </script>
 </body>
 </html>
+
 
 
 
