--- a/explorer.html
+++ b/explorer.html
@@ -187,7 +187,7 @@
     <script>
         // Database aplikasi sinkron dengan index.html
       const appDatabase = [
-    { url: 'Readme.html', label: 'Tentang', icon: 'ℹ️', cat: 'cat-blue' },
+    { url: 'Readme.html', label: 'Tentang', icon: 'ℹ️', cat: 'cat-time' },
     { url: 'kesetaraan harga emas perak.html', label: 'Kesetaraan Harga Emas dan Perak', icon: '📝', cat: 'cat-blue' },
     { url: 'kesetaraan nilai.html', label: 'Kesetaraan Nilai', icon: '📝', cat: 'cat-blue' },
     { url: 'persamaan nilai komoditas.html', label: 'Persamaan Nilai tanpa Alat Tukar', icon: '📝', cat: 'cat-blue' },
@@ -407,6 +407,7 @@
     </script>
 </body>
 </html>
+
 
 
 
