--- a/explorer.html
+++ b/explorer.html
@@ -49,29 +49,11 @@
         /* --- LAYOUT --- */
         .explorer-container { display: flex; flex: 1; overflow: hidden; position: relative; }
         
-        /* Update Sidebar lo jadi begini biar bisa scroll */
-.sidebar { 
-    width: 230px; 
-    background: var(--sidebar-bg); 
-    border-right: 1px solid var(--border); 
-    font-size: 0.85rem;
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 85px); /* Potong tinggi toolbar & taskbar */
-    overflow-y: auto; /* INI KUNCINYA */
-}
-
-/* Biar scrollbar-nya tipis dan gak ngerusak pemandangan */
-.sidebar::-webkit-scrollbar { width: 4px; }
-.sidebar::-webkit-scrollbar-thumb { background: var(--win-blue); border-radius: 10px; }
-
-/* Tambahan dikit biar Grid App gak kepotong */
-.explorer-view { 
-    flex: 1; 
-    padding: 20px; 
-    overflow-y: auto; 
-    height: calc(100vh - 85px); 
-}
+        .sidebar { 
+            width: 230px; background: var(--sidebar-bg); 
+            border-right: 1px solid var(--border); font-size: 0.85rem;
+            padding-top: 10px;
+        }
 
         .nav-group { 
             margin: 5px 10px 15px 10px; 
@@ -245,16 +227,6 @@
     { url: 'konsep anti tanah gerak dan longsor.html', label: 'Konsep Anti Tanah Gerak dan Longsor', icon: '📝', cat: 'cat-blue' },
     { url: 'tata ruag bio mekanik.html', label: 'Tata Ruang Bio Mekanik', icon: '📝', cat: 'cat-blue' },
     { url: 'konsep tata ruang anti banjir dan logsor.html', label: 'Konsep Tata Ruang Anti Banjir dan Logsor', icon: '📝', cat: 'cat-blue' },
-    { url: 'metode susun modular.html', label: 'Metode Susun Modular', icon: '📝', cat: 'cat-blue' },
-    { url: 'printer 3d tartaria.html', label: 'Printer 3D Tartaria', icon: '📝', cat: 'cat-blue' },
-    { url: 'blue print 3d modular.html', label: 'Blue Print 3D Modular', icon: '📝', cat: 'cat-blue' },
-    { url: 'tahapan pembangunan bangunan interlocking.html', label: 'Tahapan Pembangunan Bangunan Interlocking', icon: '📝', cat: 'cat-blue' },
-    { url: 'teknik arsitektur tarumanagara.html', label: 'Teknik Arsitektur Tarumanagara', icon: '📝', cat: 'cat-blue' },
-    { url: 'visualisasi denah prequensi.html', label: 'Visualisasi Denah Frequensi', icon: '📝', cat: 'cat-blue' },
-    { url: 'resonansi element dan hunian.html', label: 'Resonansi Element dan Hunian', icon: '📝', cat: 'cat-blue' },
-    { url: 'cara rakit antena frequensi bumi.html', label: 'Cara Rakit Antena Frequensi Bumi', icon: '📝', cat: 'cat-blue' },
-    { url: 'bio sensor flora sebagai tanaman peringatan dini bencana.html', label: 'Bio Sensor Flora Sebagai Tanaman Peringatan Dini Bencana', icon: '📝', cat: 'cat-blue' },
-    { url: 'detektor gas alkimia.html', label: 'Bio Frequensi Hening', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -334,11 +306,11 @@
     { url: 'manual jam sunda nuswantara.html', label: 'Manual Penggunaan Jam Sunda Nuswantara', icon: '📖', cat: 'cat-culture' },
     { url: 'manual kalender nuswantara.html', label: 'Manual Penggunaan Kalender Sunda Nuswantara', icon: '📖', cat: 'cat-culture' },
     { url: 'kalkulator lahan padi.html', label: 'Kalkulator Kebutuhan Lahan Padi', icon: '🌾', cat: 'cat-edu' },
-    { url: 'kalkulator jumlah ternak.html', label: 'Kalkulator Management Ternak', icon: '🛖', cat: 'cat-edu' },
     { url: '05 simulator tuning frequensi.html', label: 'Simulator Tuning Frequensi', icon: '📡', cat: 'cat-edu' },
     { url: '04 pusaka digtal arsitektur nuswantara.html', label: 'Pusaka Digtal Arsitektur Nuswantara', icon: '🛖', cat: 'cat-edu' },
     { url: '03 Vastu-Purusha Mandala.html', label: 'Vastu-Purusha Mandala Denah Maker', icon: '🛖', cat: 'cat-edu' },
     { url: '02 gomati scale calculator.html', label: 'Gomati Scale Calculator', icon: '🛖', cat: 'cat-edu' },
+    { url: 'kalkulator jumlah ternak.html', label: 'Kalkulator Management Ternak', icon: '🛖', cat: 'cat-edu' },
     { url: 'kalkulator panen ikan dan sayur.html', label: 'Kalkulator Kebutuhan Protein Ikan dan Sayur', icon: '🍯', cat: 'cat-edu' }
       ];
 
@@ -440,4 +412,3 @@
     </script>
 </body>
 </html>
-
