--- a/index.html
+++ b/index.html
@@ -663,6 +663,9 @@
                     <a href="#" onclick="launchApp('edukasi survival dasar.html', 'Edukasi Survival Dasar', '📚')" class="app-card cat-lingo">
                     <div class="app-icon">📚</div><div class="app-label">Kumpulan Informasi Dasar Survival</div>
                 </a>
+                    <a href="explorer.html" class="app-card cat-doc">
+                    <div class="app-icon">💠</div><div class="app-label">Buka Explorer</div>
+                </a>
                     
             </div>
 
@@ -1045,6 +1048,7 @@
     </script>
 </body>
 </html>
+
 
 
 
