--- a/index.html
+++ b/index.html
@@ -666,6 +666,9 @@
                     <a href="explorer.html" class="app-card cat-doc">
                     <div class="app-icon">💠</div><div class="app-label">Buka Explorer</div>
                 </a>
+                    <a href="#" onclick="launchApp('audit finansial.html', 'Syariat & Hakikat', '⚖️')" class="app-card cat-edu">
+                    <div class="app-icon">⚖️</div><div class="app-label">Audit Finansial</div>
+                </a>
                     
             </div>
 
@@ -1048,6 +1051,7 @@
     </script>
 </body>
 </html>
+
 
 
 
