--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                     <a href="explorer.html" class="app-card cat-doc">
                     <div class="app-icon">💠</div><div class="app-label">Buka Explorer</div>
                 </a>
-                    <a href="#" onclick="launchApp('audit finansial.html', 'Syariat & Hakikat', '⚖️')" class="app-card cat-edu">
+                    <a href="#" onclick="launchApp('audit finansial.html', 'Audit Finansial', '⚖️')" class="app-card cat-edu">
                     <div class="app-icon">⚖️</div><div class="app-label">Audit Finansial</div>
                 </a>
                     
@@ -1051,6 +1051,7 @@
     </script>
 </body>
 </html>
+
 
 
 
