--- a/explorer.html
+++ b/explorer.html
@@ -300,6 +300,14 @@
     { url: 'cara rakit antena frequensi bumi.html', label: 'Cara Rakit Antena Frequensi Bumi', icon: '📝', cat: 'cat-blue' },
     { url: 'bio sensor flora sebagai tanaman peringatan dini bencana.html', label: 'Bio Sensor Flora Sebagai Tanaman Peringatan Dini Bencana', icon: '📝', cat: 'cat-blue' },
     { url: 'detektor gas alkimia.html', label: 'Detektor Gas Alkimia', icon: '📝', cat: 'cat-blue' },
+    { url: 'nilai tanah jarang nuswantara part2.html', label: 'Nilai Tanah Jarang Nuswantara Part2', icon: '📝', cat: 'cat-blue' },
+    { url: 'nilai tanah jarang nuswantara.html', label: 'Nilai Tanah Jarang Nuswantara', icon: '📝', cat: 'cat-blue' },
+    { url: 'SOP pengolahan tanah jarang untuk kapasitor manna.html', label: 'SOP Pengolahan Tanah Jarang Untuk Kapasitor Manna', icon: '📝', cat: 'cat-blue' },
+    { url: 'skema bahan kapasitor manna.html', label: 'Skema Bahan Kapasitor Manna', icon: '📝', cat: 'cat-blue' },
+    { url: 'ektraksi bahan tanah jarang kapasitor.html', label: 'Ektraksi Bahan Tanah Jarang Kapasitor', icon: '📝', cat: 'cat-blue' },
+    { url: 'kapasitor ether.html', label: 'Kapasitor Ether', icon: '📝', cat: 'cat-blue' },
+    { url: 'tanah jarang lanjutan.html', label: 'Tanah Jarang Lanjutan', icon: '📝', cat: 'cat-blue' },
+    { url: 'jenis tanah jarang.html', label: 'Jenis Tanah Jarang', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -498,4 +506,5 @@
     </script>
 </body>
 </html>
+
 
